@@ -1,3 +1,6 @@
+2020-07-18
+- Fix #231 sampling detection
+
 2020-06-20
 - Honor -n flag when printing sorted flow cache
 - Fix uninitialized variable printPlain
